--- a/src/template.hbs
+++ b/src/template.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
-<li>
+<li class="list-item">
 <div class="photo-card">
-    <img src="{{webformatURL}}" alt="picture" />
+    <img src="{{webformatURL}}" alt="picture" width="500" />
 
     <div class="stats">
         <p class="stats-item">
