--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,172 @@
 .gallery {
   display: flex;
   flex-wrap: wrap;
+  padding: 4px;
+  justify-content: center;
 }
 .list-item {
   list-style: none;
   margin: 10px;
 }
 
-/* .list-item:nth-child(2n) {
-  margin-right: 0px;
-}
-.list-item:nth-last-child(-n + 2) {
-  margin-bottom: 0px;
-} */
 .stats {
   display: flex;
+  color: #bbbbbd;
 }
 .stats-item + .stats-item {
-  margin-left: 40px;
+  margin-left: 30px;
+}
+
+@media screen and (max-width: 480px) {
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
 }
 img {
   height: 400px;
   object-fit: cover;
+}
+
+@media screen and (max-width: 480px) {
+  input {
+    width: 35%;
+  }
+}
+input {
+  border: 2px solid #000305;
+  border-radius: 4px;
+  margin-left: 5%;
+  margin-top: 1%;
+  padding: 2px;
+  outline: none;
+}
+
+.btn_loader {
+  border-radius: 6px;
+  padding: 4px;
+  margin-left: 6%;
+  margin-bottom: 3%;
+}
+.btn_scroll {
+  border-radius: 50%;
+  position: fixed;
+  right: 1%;
+  bottom: 1%;
+}
+.btn_scroll:hover,
+.btn_scroll:focus,
+.btn_loader:hover,
+.btn_loader:focus {
+  background-color: rgb(160, 158, 158);
+}
+
+.btn_loader--hidden {
+  visibility: hidden;
+}
+
+/* -- */
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  transition: color 150ms var(--timing-function),
+    background-color 150ms var(--timing-function);
+}
+
+body.light-theme {
+  background-color: #fff;
+  color: #333333;
+}
+
+body.dark-theme {
+  background-color: #333333;
+  color: #fff;
+}
+
+.toolbar {
+  display: flex;
+  justify-content: flex-end;
+  padding: 16px 24px;
+}
+
+/* THEME SWITCH */
+.theme-switch {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 1%;
+  right: 0.5%;
+}
+
+.theme-switch__icon {
+  color: currentColor;
+  height: 21px;
+  width: 21px;
+  margin-right: 6px;
+  margin-left: 6px;
+}
+
+.theme-switch__control {
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  position: relative;
+  width: 58px;
+  height: 29px;
+  border-radius: 50em;
+  padding: 3px 0;
+}
+
+.theme-switch__toggle {
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  height: 0;
+  width: 0;
+  pointer-events: none;
+}
+
+.theme-switch__track {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: transparent;
+  user-select: none;
+  background-color: #333;
+  border-radius: inherit;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.theme-switch__marker {
+  position: relative;
+  background-color: #fff;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  z-index: 2;
+  pointer-events: none;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  transform: translateX(3px);
+  transition: transform 250ms var(--timing-function);
+}
+
+.theme-switch__toggle:checked + .theme-switch__track {
+  background-color: #d3d3d4;
+}
+
+.theme-switch__toggle:checked ~ .theme-switch__marker {
+  transform: translateX(35px);
+}
+
+.theme-switch__toggle:focus + .theme-switch__track,
+.theme-switch__toggle:active + .theme-switch__track {
+  box-shadow: 0 0 0 3px #2196f3;
 }
